--- a/index.html
+++ b/index.html
@@ -167,17 +167,28 @@
              <p class="font-bold">No asignado</p>
              <div class="flex space-x-2">
              <div class="flex items-center space-x-1 font-semibold" >
-             <img src="public\imagenes\reloj.png" alt="Logo" class="h-4" >
+           <!--  <img src="public\imagenes\reloj.png" alt="Logo" class="h-4" > -->
+             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"   fill="currentColor" class="bi bi-clock svg-color" viewBox="0 0 16 16">
+              <path d="M8 3.5a.5.5 0 0 0-1 0V9a.5.5 0 0 0 .252.434l3.5 2a.5.5 0 0 0 .496-.868L8 8.71z"/>
+              <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16m7-8A7 7 0 1 1 1 8a7 7 0 0 1 14 0"/>
+            </svg>
              <a href="#" class="text-darkblue hover:text-lightblue "> </a>
              </div>
 
             <div class="flex items-center space-x-1 font-semibold" >
-             <img src="public\imagenes\mas.png" alt="Logo" class="h-4" >
-              <a href="#" class="text-darkblue hover:text-lightblue "> </a>
+            <!-- <img src="public\imagenes\mas.png" alt="Logo" class="h-4" > -->
+             <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-plus svg-color" viewBox="0 0 16 16">
+              <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4"/>
+            </svg>
+              <a href="#" class="text-black hover:text-lightblue "> </a>
             </div>
 
            <div class="flex items-center space-x-1 font-semibold" >
-            <img src="public\imagenes\menu.png" alt="Logo" class="h-4" >
+          <!--  <img src="public\imagenes\menu.png" alt="Logo" class="h-4" > -->
+            <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-list svg-color" viewBox="0 0 16 16">
+             <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
+            </svg>
+
            <a href="#" class="text-darkblue hover:text-lightblue "> </a>
            </div>
            </div>
@@ -205,7 +216,10 @@
             <div class="p-3 flex items-center justify-between bg-blue-200">
               <p class="font-bold">No asignado</p>
               <div class="flex items-center space-x-1 font-semibold" >
-                <img src="public\imagenes\mas.png" alt="Logo" class="h-4" >
+                <!--<img src="public\imagenes\mas.png" alt="Logo" class="h-4" >-->
+                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-plus svg-color" viewBox="0 0 16 16">
+                  <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4"/>
+                </svg>
                 <a href="#" class="text-darkblue hover:text-lightblue "> </a>
               </div>
             </div>
