--- a/index.html
+++ b/index.html
@@ -260,9 +260,13 @@
     <input class="mt-4" type="file" accept=".csv, .ods, .xlsx"/>
   </div>
 </div>
-<!-- Modal -->
-<div id="modalSinAsignar" class="fixed inset-0 flex items-center justify-center z-50 hidden">
-  <div class="bg-white rounded-lg shadow-lg p-8 w-3/4 relative">
+<!-- Contenedor principal -->
+<div class="relative min-h-screen">
+  <!-- Contenedor principal -->
+<div class="relative min-h-screen">
+  <!-- Modal -->
+  <div id="modalSinAsignar" class="fixed inset-0 flex items-center justify-center z-40 hidden">
+    <div class="bg-white rounded-lg shadow-lg p-8 w-3/4 relative max-h-[80vh] overflow-auto">
       <!-- Botón de Cierre -->
       <button class="absolute top-4 right-4 text-gray-500 hover:text-gray-800" onclick="closeModal('modalSinAsignar')">
           <i class="fas fa-times fa-lg"></i>
@@ -331,8 +335,13 @@
             <button class="bg-gray-300 text-black px-4 py-2 rounded ml-2" onclick="closeModal('modalSinAsignar')">Cancelar</button>
         </div>
       </div>
+    </div>
   </div>
-</div>
+
+  
+
+
+
 
   <script src="index.js"> </script>
   <script type="module" src="/main.js"></script>
