--- a/index.html
+++ b/index.html
@@ -263,9 +263,11 @@
 <!-- Contenedor principal -->
 <div class="relative min-h-screen">
   <!-- Contenedor principal -->
+<di class="relative min-h-screen">
+ <!-- Contenedor principal -->
 <div class="relative min-h-screen">
   <!-- Modal -->
-  <div id="modalSinAsignar" class="fixed inset-0 flex items-center justify-center z-40 hidden">
+  <div id="modalSinAsignar" class="fixed inset-0 flex items-center justify-center z-50 hidden">
     <div class="bg-white rounded-lg shadow-lg p-8 w-3/4 relative max-h-[80vh] overflow-auto">
       <!-- Botón de Cierre -->
       <button class="absolute top-4 right-4 text-gray-500 hover:text-gray-800" onclick="closeModal('modalSinAsignar')">
@@ -338,8 +340,7 @@
     </div>
   </div>
 
-  
-
+ 
 
 
 
